--- a/public/projects.html
+++ b/public/projects.html
@@ -797,18 +797,24 @@
                         src="../project4_images/all.png">
                     </ul>
                     <li><strong>Greedy Forward Selection</strong></li>
-                    <p style="padding-top: 15px;">Notice that it is not true that the more features you combine, the more accurate it will be.</p>
+                    <p style="padding-top: 15px;">Notice that it is not true that the more features you combine, the
+                      more accurate it will be.</p>
                     <img style="max-width: 60%; max-height: 60%; padding-top: 15px; padding-bottom: 30px;"
-                        src="../project4_images/final.png">
+                      src="../project4_images/final.png">
                     <p>From this result, we can now report two things:</p>
                     <ol>
-                      <li>For this problem, features '<i>3</i>' and '<i>4</i>' are the best.</li>
+                      <li>For this problem, features <strong>'3'</strong> and <strong>'4'</strong> are the best.</li>
                       <li>When we depoly this model, the accuracy is about <code>98%</code>.</li>
                     </ol>
                     <li style="padding-top: 16px;"><strong>Implementing Project Part 1</strong></li>
+                    <p style="padding-top: 16px;">In part 1 of this project, we do not have the measurement data above,
+                      so we use <code>computer-generated random numbers</code> to simulate the measurement process.</p>
+                    <img style="max-width: 40%; max-height: 60%; padding-top: 15px; padding-bottom: 30px;"
+                      src="../project4_images/random_number.png">
+                    <p>Here, I gave the range of the random accuracy from <code>25</code> to <code>95</code>.</p>
                   </ul>
 
-                  
+
                 </div>
               </div>
             </div>
