--- a/public/projects.html
+++ b/public/projects.html
@@ -807,11 +807,17 @@
                       <li>When we depoly this model, the accuracy is about <code>98%</code>.</li>
                     </ol>
                     <li style="padding-top: 16px;"><strong>Implementing Project Part 1</strong></li>
-                    <p style="padding-top: 16px;">In part 1 of this project, we do not have the measurement data above,
+                    <p style="padding-top: 16px; max-width: 70%;">In part 1 of this project, we do not have the measurement data above,
                       so we use <code>computer-generated random numbers</code> to simulate the measurement process.</p>
                     <img style="max-width: 40%; max-height: 60%; padding-top: 15px; padding-bottom: 30px;"
                       src="../project4_images/random_number.png">
                     <p>Here, I gave the range of the random accuracy from <code>25</code> to <code>95</code>.</p>
+                    <p style="max-width: 70%;">This algorithm generates a random accuracy every time a new combination of features is used, 
+                      until all possible combinations of features are completed 
+                      and returns the <code>highest accuracy</code> of the feature combination.</p>
+                    <p>Here is a sample output:</p>
+                    <img style="max-width: 60%; max-height: 40%; padding-top: 15px; padding-bottom: 30px;"
+                      src="../project4_images/acc.png"
                   </ul>
 
 
