--- a/public/projects.html
+++ b/public/projects.html
@@ -807,20 +807,19 @@
                       <li>When we depoly this model, the accuracy is about <code>98%</code>.</li>
                     </ol>
                     <li style="padding-top: 16px;"><strong>Implementing Project Part 1</strong></li>
-                    <p style="padding-top: 16px; max-width: 70%;">In part 1 of this project, we do not have the measurement data above,
+                    <p style="padding-top: 16px; max-width: 70%;">In part 1 of this project, we do not have the
+                      measurement data above,
                       so we use <code>computer-generated random numbers</code> to simulate the measurement process.</p>
                     <img style="max-width: 40%; max-height: 60%; padding-top: 15px; padding-bottom: 30px;"
                       src="../project4_images/random_number.png">
                     <p>Here, I gave the range of the random accuracy from <code>25</code> to <code>95</code>.</p>
-                    <p style="max-width: 70%;">This algorithm generates a random accuracy every time a new combination of features is used, 
-                      until all possible combinations of features are completed 
+                    <p style="max-width: 70%;">This algorithm generates a random accuracy every time a new combination
+                      of features is used,
+                      until all possible combinations of features are completed
                       and returns the <code>highest accuracy</code> of the feature combination.</p>
                     <p>Here is a sample output:</p>
                     <img style="max-width: 60%; max-height: 40%; padding-top: 15px; padding-bottom: 30px;"
-                      src="../project4_images/acc.png"
-                  </ul>
-
-
+                      src="../project4_images/acc.png" </ul>
                 </div>
               </div>
             </div>
@@ -840,30 +839,44 @@
               <div class="accordion-body">
                 <!-- Put technology stack rationale right here -->
                 <div>
-                  <p><strong>Heuristic Search</strong> is a Informed Search.</p>
-                  <p>A Heuristic is a function that, when applied to a state, returns a number that is an estimate of
-                    the merit of the state, with respect to the goal.</p>
-                  <p>In other words, the heuristic tells us approximately how far the state is from the
-                    <code>goal state</code>.
-                  </p>
-                  <img style="max-width: 30%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
-                    src="../project3_images/goal_state.png">
-                  <p>In this case, only <strong>'8'</strong> is misplaced, so the heuristic function evaluates to 1.</p>
-                  <p style="color:chocolate">In other words, the heuristic is telling us, that it thinks a solution
-                    might be available in just 1 more move.</p>
-                  <img style="max-width: 70%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
-                    src="../project3_images/manhattan.png">
-                  <p style="color:chocolate">Through Heuristic Search, we can effectively prune the Blind Search Tree.
-                  </p>
-                  <img style="max-width: 70%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
-                    src="../project3_images/jian.png">
                   <ul>
-                    <li><strong>My Code of Finding h(n)</strong></li>
-                    <img style="max-width: 60%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
-                      src="../project3_images/code.png">
-                    <li><strong>A Sample Console Output</strong></li>
-                    <img style="max-width: 60%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
-                      src="../project3_images/output.png">
+                    <li><strong>Nearest Neighbor Classifier</strong></li>
+                    <p style="padding-top: 15px;">In part 1, we implemented Simple Linear Classifier.</p>
+                    <p>In part 2, we are going to implement Nearest Neighbor Classifier</p>
+                    <img style="max-width: 70%; max-height: 60%; padding-top: 15px; padding-bottom: 30px;"
+                      src="../project4_images/NN.png">
+                    <p>This algorithm simply means that we have some measurement data.</p>
+                    <p style="max-width: 80%;">We can imagine these measurement data as the measured
+                      <code>weight</code>,
+                      <code>thickness</code>, <code>electrical resistance</code>, or <code>diameter</code> in Part 1.
+                    </p>
+                    <ol style="max-width: 70%;">
+                      <li>We set a <code>Test instance</code> (usually the first instance). </li>
+                      <li>All the other instances are the <code>Training instances</code>.</li>
+                      <li>Use integer <code>int correct = 0</code> to record the total correct NN-classifier number.
+                      </li>
+                      <li>Find the <code>nearest instance</code> to the test instance. In this step, we can pick which
+                        feature(s) we want to test.</li>
+                      <li>If this instance is the same as the test instance (they are all American quarters or Canadian
+                        pennies), <code>correct++</code>.</li>
+                      <li>Loop all the other instances as test instance.</li>
+                      <p style="padding-left: 20px; padding-top: 15px;"><code>accuracy = correct / instances</code></p>
+                      <p style="color:brown">We got the accuracy under selected features.</p>
+                    </ol>
+                    <li><strong>Inplementing Nearest Neighbor Classifier</strong></li>
+                    <p style="padding-top: 15px;">We are given <code>txt files</code> like as the following:</p>
+                    <img style="max-width: 96%; max-height: 60%; padding-top: 15px; padding-bottom: 30px;"
+                      src="../project4_images/txt.png">
+                    <ul>
+                      <li>The first column of this file is the <code>ID</code> of a instance.</li>
+                      <li>The second column to the last column is 10 features of all the instances.</li>
+                    </ul>
+                    <p style="padding-top: 40px; color:brown">A snippet of code:</p>
+                    <img style="max-width: 70%; max-height: 60%; padding-top: 15px; padding-bottom: 30px;"
+                      src="../project4_images/code.png">
+                    <p style="padding-top: 40px; color:brown">A snippet of output:</p>
+                    <img style="max-width: 60%; max-height: 60%; padding-top: 15px; padding-bottom: 30px;"
+                      src="../project4_images/output.png">
                   </ul>
                 </div>
               </div>
