push some thing

--- a/index.html
+++ b/index.html
@@ -111,14 +111,25 @@
           </a>
         </header>
 
+
+        <div class="shadow p-3 mb-5 bg-body-tertiary rounded">
+          <p>I graduated from UC Riverside last December with a Bachelor of Science degree in Computer Science, achieving a GPA of 3.79.</p>
+          <img style="max-width: 60%; max-height: 60%; padding-top: 15px; padding-bottom: 30px;"
+            src="../4.3 HTML Porfolio Project/images/gpa.png">
+          <p style="color:chocolate">I am an active coder.</p>
+          <img style="max-width: 60%; max-height: 60%; padding-top: 15px; padding-bottom: 30px;"
+            src="../4.3 HTML Porfolio Project/images/git.png">
+        </div>
+
         <div class="p-5 mb-4 bg-body-tertiary rounded-3">
-          <div class="container-fluid py-5">
-            <h1 class="display-6 fw-bold">My Projects</h1>
-            <p class="col-md-8 fs-4">I'd like to briefly introduce four major projects I've done. The first one is my
-              graduation project, a ship management software. The second one is a website for a restaurant ordering
+          <div class="container-fluid py-3">
+            <h2 class="display-7 fw-bold">My Projects</h2>
+            <p class="col-md-11 fs-5">I'd like to briefly introduce four major projects I've done. The first one is my
+              graduation project, a ship management software. The second one is a website for a restaurant online
+              ordering
               system, and the last two are 8-puzzle problems related to Artificial Intelligence, as well as a Feature
               Selection project related to Machine Learning.</p>
-            <a href="./public/projects.html" class="btn btn-primary btn-lg" role="button">More details</a>
+            <a href="./public/projects.html" class="btn btn-primary btn-md" role="button">More details</a>
           </div>
         </div>
 
