--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
         <div class="shadow p-3 mb-5 bg-body-tertiary rounded">
           <p>I graduated from UC Riverside last December with a Bachelor of Science degree in Computer Science, achieving a GPA of 3.79.</p>
           <img style="max-width: 60%; max-height: 60%; padding-top: 15px; padding-bottom: 30px;"
-            src="../4.3 HTML Porfolio Project/images/gpa.png">
+            src="./project4_images/gpa.png">
           <p style="color:chocolate">I am an active coder.</p>
           <img style="max-width: 60%; max-height: 60%; padding-top: 15px; padding-bottom: 30px;"
-            src="../4.3 HTML Porfolio Project/images/git.png">
+            src="./project4_images/git.png">
         </div>
 
         <div class="p-5 mb-4 bg-body-tertiary rounded-3">
