--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
                   <div class="card-body">
                     <h5 class="card-title">Maching Learning Projects</h5>
                     <p class="card-text" style="padding-left: 0px; padding-bottom: 20px;">An algorithm written 100% in
-                      <i>Java</i> to find the best features combination that distinguishes two items.</p>
+                      <i>Java</i> to find the best features combination that distinguishes two items.
+                    </p>
                     <img style="max-width: 60%; max-height: 60%; padding-top: 0px; padding-bottom: 10px;"
                       src="./project3_images/l3.png">
                     <p></p>
@@ -202,9 +203,11 @@
           <div class="col-md-6">
             <div class="h-100 p-5 text-bg-dark rounded-3">
               <h2>About Me</h2>
-              <p style="padding-left: 0px;">I enjoy gaming.</p>
-              <p style="padding-left: 0px; padding-top: 0px;">I love watching movies with my family.</p>
-              <p style="padding-left: 0px; padding-top: 0px;">I like novels.</p>
+              <div style="font-weight: bold;">
+                <p style="padding-left: 0px;">I enjoy gaming.</p>
+                <p style="padding-left: 0px; padding-top: 0px;">I love watching movies with my family.</p>
+                <p style="padding-left: 0px; padding-top: 0px;">I like novels.</p>
+              </div>
               <p style="padding-left: 0px;">Click 'My Top 3s' button to learn about my top 3 video games, movies, and
                 novels
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -215,7 +218,7 @@
                 </svg>
               </p>
 
-              <button class="btn btn-outline-light" type="button">My Top 3s</button>
+              <a href="./public/likes.html" class="btn btn-outline-light" type="button">My Top 3s</button>
             </div>
           </div>
           <div class="col-md-6">
