--- a/index.html
+++ b/index.html
@@ -203,11 +203,9 @@
           <div class="col-md-6">
             <div class="h-100 p-5 text-bg-dark rounded-3">
               <h2>About Me</h2>
-              <div style="font-weight: bold;">
-                <p style="padding-left: 0px;">I enjoy gaming.</p>
-                <p style="padding-left: 0px; padding-top: 0px;">I love watching movies with my family.</p>
-                <p style="padding-left: 0px; padding-top: 0px;">I like novels.</p>
-              </div>
+              <p style="padding-left: 0px;">I enjoy gaming.</p>
+              <p style="padding-left: 0px; padding-top: 0px;">I love watching movies with my family.</p>
+              <p style="padding-left: 0px; padding-top: 0px;">I like novels.</p>
               <p style="padding-left: 0px;">Click 'My Top 3s' button to learn about my top 3 video games, movies, and
                 novels
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -217,8 +215,7 @@
                     d="M4.285 9.567a.5.5 0 0 1 .683.183A3.5 3.5 0 0 0 8 11.5a3.5 3.5 0 0 0 3.032-1.75.5.5 0 1 1 .866.5A4.5 4.5 0 0 1 8 12.5a4.5 4.5 0 0 1-3.898-2.25.5.5 0 0 1 .183-.683M7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5m4 0c0 .828-.448 1.5-1 1.5s-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5" />
                 </svg>
               </p>
-
-              <a href="./public/likes.html" class="btn btn-outline-light" type="button">My Top 3s</button>
+              <a href="./public/likes.html" class="btn btn-outline-light" type="button">My Top 3s</a>
             </div>
           </div>
           <div class="col-md-6">
