Fixed a bug that might lead to the text mix with images.

--- a/public/likes.html
+++ b/public/likes.html
@@ -14,10 +14,14 @@
 
 <body>
   <!--This line is key to implement bootstrap components-->
-  <main class="container">
+  <main class="container position-relative">
+    <button class="btn btn-primary position-absolute btn-sm top-0 end-0 mt-1 me-5" onclick="goBack()">Home</button>
     <div class="my-3 p-3 bg-body rounded shadow-sm bg-body-tertiary">
+
       <h6 class="border-bottom pb-2 mb-0"><strong>My Top 3 Video Games</strong></h6>
+      
       <div class="d-flex text-body-secondary pt-3">
+        
         <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32"
           xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32"
           preserveAspectRatio="xMidYMid slice" focusable="false">
@@ -30,6 +34,7 @@
           <strong class="d-block text-gray-dark">The Witcher 3: Wild Hunt</strong>
           I have spent more than 180 hours on this game, the DLCs are also amazing. No game can surpass its place in my
           heart.
+          <br>
           <img style="margin: 0 auto; max-width: 70%; padding-top: 20px;" src="../project3_images/witcher.png">
         </p>
 
@@ -46,6 +51,7 @@
         <p class="pb-3 mb-0 small lh-sm border-bottom">
           <strong class="d-block text-gray-dark">The Legend of Zelda: Tears of the Kingdom</strong>
           I have spent over 190 hours on this game. It has the highest degree of freedom of any game I have ever played.
+          <br>
           <img style="margin: 0 auto; max-width: 70%; padding-top: 20px;" src="../project3_images/tears.png">
         </p>
       </div>
@@ -61,6 +67,7 @@
         <p class="pb-3 mb-0 small lh-sm border-bottom">
           <strong class="d-block text-gray-dark">Sekiro: Shadows Die Twice</strong>
           My first Souls Game. The game process is very challenging, but after completing it, I have endless aftertaste.
+          <br>
           <img style="margin: 0 auto; max-width: 70%; padding-top: 20px;" src="../project3_images/Sekiro_24.jpg">
         </p>
       </div>
@@ -81,6 +88,7 @@
         <p class="pb-3 mb-0 small lh-sm border-bottom">
           <strong class="d-block text-gray-dark">Saving Private Ryan</strong>
           No matter how many times I've watched this movie, whenever I open it again, I can still binge-watch it in one go.
+          <br>
           <img style="margin: 0 auto; max-width: 70%; padding-top: 20px;" src="../project3_images/saving.png">
         </p>
 
@@ -96,7 +104,8 @@
 
         <p class="pb-3 mb-0 small lh-sm border-bottom">
           <strong class="d-block text-gray-dark">Forrest Gump</strong>
-          At the beginning of the movie, it tells the true meaning of life, which is feathers. You can't decide and choose what you will encounter. You can only sway with the wind and stretch out beautifully in the air! A modern history of the United States. So good!
+          A modern history of the United States. So good!
+          <br>
           <img style="margin: 0 auto; max-width: 70%; padding-top: 20px;" src="../project3_images/forrest.png">
         </p>
       </div>
@@ -111,8 +120,9 @@
 
         <p class="pb-3 mb-0 small lh-sm border-bottom">
           <strong class="d-block text-gray-dark">Green Book</strong>
-          A tale of overcoming prejudices, requiring courage. The most impressive scene is the scene where their car broke down on a country road in the south and they looked at the "black slaves" working in the fields. There was a silent but loud noise.
-          <img style="margin: 0 auto; max-width: 70%; padding-top: 20px;" src="../project3_images/green.jpg">
+          A tale of overcoming prejudices, requiring courage. 
+          <br>
+          <img style="margin: 0; max-width: 70%; padding-top: 20px;" src="../project3_images/green.jpg">
         </p>
       </div>
 
@@ -132,8 +142,9 @@
 
         <p class="pb-3 mb-0 small lh-sm border-bottom">
           <strong class="d-block text-gray-dark">The Three-Body Problem</strong>
-          The Three-Body Problem is the first chance for English-speaking readers to experience the Hugo Award-winning phenomenon from China's most beloved science fiction author, Liu Cixin. It is the best science fiction in my opinion.
-          <img style="margin: 0 auto; max-width: 70%; padding-top: 20px;" src="../project3_images/three_body.jpg">
+          This is <i>the best science fiction</i>.
+          <br>
+          <img style="margin: 0 auto; max-width: 50%; padding-top: 20px;" src="../project3_images/three_body.jpg">
         </p>
 
       </div>
@@ -148,8 +159,9 @@
 
         <p class="pb-3 mb-0 small lh-sm border-bottom">
           <strong class="d-block text-gray-dark">How to Win Friends & Influence People</strong>
-          We should be concerned with our problems, not our worries. Paying attention means recognizing the problem and taking steps to deal with it calmly. Worrying is just panicking in circles. What hurts a person is not the event itself, but his perception of the event.
-          <img style="margin: 0 auto; max-width: 70%; padding-top: 20px;" src="../project3_images/71vK0WVQ4rL._SL1500_.jpg">
+          We should be concerned with our problems, not our worries. 
+          <br>
+          <img style="margin: 0 auto; max-width: 50%; padding-top: 20px;" src="../project3_images/71vK0WVQ4rL._SL1500_.jpg">
         </p>
       </div>
       <div class="d-flex text-body-secondary pt-3">
@@ -162,9 +174,10 @@
         </svg>
 
         <p class="pb-3 mb-0 small lh-sm border-bottom">
-          <strong class="d-block text-gray-dark">A Killer's Mind</strong>
-          Mike Omer's novels always have the irresistible quality of keeping readers hooked from start to finish. It is worth mentioning that this is the first crime suspense novel I have ever read, and I have been hooked ever since.
-          <img style="margin: 0 auto; max-width: 70%; padding-top: 20px;" src="../project3_images/A1T-Bwe+wzL._SL1500_.jpg">
+          <strong class="d-block text-gray-dark">A Killer's Mind</strong>         
+          Mike Omer's novels always have the irresistible quality of keeping readers hooked from start to finish.
+          <br>
+          <img style="margin: 0 auto; max-width: 50%; padding-top: 20px;" src="../project3_images/A1T-Bwe+wzL._SL1500_.jpg">
         </p>
       </div>
 
@@ -172,6 +185,11 @@
 
     </div>
   </main>
+  <script>
+    function goBack() {
+      window.history.back();
+    }
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
