--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 
 
         <div class="shadow p-3 mb-5 bg-body-tertiary rounded">
-          <p><strong>I graduated from UC Riverside last December with a Bachelor of Science degree in Computer Science,
-              achieving a GPA of 3.79.</strong></p>
+          <p style="max-width: 75%;"><strong>I graduated from UC Riverside last December with a Bachelor of Science degree in Computer Science,
+              achieving a Cumulative GPA of 3.79.</strong></p>
           <img style="max-width: 70%; max-height: 60%; padding-top: 15px; padding-bottom: 30px;"
             src="./project4_images/gpa.png">
           <p style="color:red"><strong>I am an active coder.</strong></p>
