push before heading to bed

--- a/public/likes.html
+++ b/public/likes.html
@@ -66,7 +66,7 @@
 
         <p class="pb-3 mb-0 small lh-sm border-bottom">
           <strong class="d-block text-gray-dark">Sekiro: Shadows Die Twice</strong>
-          My first Souls Game. The game process is very challenging, but after completing it, I have endless aftertaste.
+          My first Souls Game. The game was very challenging to me, but after completing it, I have endless aftertaste.
           <br>
           <img style="margin: 0 auto; max-width: 70%; padding-top: 20px;" src="../project3_images/Sekiro_24.jpg">
         </p>
