--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               <div class="col-sm-6" style="padding-top: 15px;">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title">Maching Learning Projects</h5>
+                    <h5 class="card-title">Machine Learning Projects</h5>
                     <p class="card-text" style="padding-left: 0px; padding-bottom: 20px;">An algorithm written 100% in
                       <i>Java</i> to find the best features combination that distinguishes two items.
                     </p>
