add a small change

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               <p style="padding-left: 0px;">I enjoy gaming.</p>
               <p style="padding-left: 0px; padding-top: 0px;">I love watching movies with my family.</p>
               <p style="padding-left: 0px; padding-top: 0px;">I like novels.</p>
-              <p style="padding-left: 0px;">Click 'My Top 3s' button to learn about my top 3 video games, movies, and
+              <p style="padding-left: 0px;">Hit 'My Top 3s' button to learn about my top 3 video games, movies, and
                 novels
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                   class="bi bi-emoji-smile" viewBox="0 0 16 16">
